# PhdOpen2026Diffusion

./: LICENSE  README.md  pyproject.toml  tutorial_continuous_diffusion.ipynb  tutorial_discrete_diffusion.ipynb
